tests/diagnostics/catalog/snapshots/ir/IR0021.snap
error[IR0021]: IR_E_EXPORT_CONFLICT
 --> tests/diagnostics/catalog/sources/ir/IR0021.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0021
  = help: keep IR validation diagnostics structured and catalog-backed
